test/tests/errors/error-function-incorrect-param.sm
// true
// false
/**/
/**/

program {
    func x(a, b) {
        "t"
    }

    output x(4);
}